# godot4_rust_roguelike_tutorial

./: .gitignore  Cargo.toml  README.md  godot4_rust_roguelike_tutorial.gdextension  icon.svg.import  project.godot  rustfmt.toml
01/: Cargo.toml  godot4_rust_roguelike_tutorial_01.gdextension  icon.svg.import  project.godot
01/assets/images/kenney_1-bit-pack/: monochrome_packed.png.import
01/src/: lib.rs
01/src/entities/actors/actions/: mod.rs
01/src/game/: event_handler.rs  mod.rs  mod.tscn
01/src/utils/: grid.rs  mod.rs
assets/audio/flare/: melee_attack.ogg.import
assets/audio/voxelibre/: default_dirt_footstep.1.ogg.import  default_dirt_footstep.2.ogg.import
assets/definitions/entities/actors/: entity_definition_player.tres
assets/images/: test_tileset.png.import
assets/images/voxelibre/: cave_tile_set.png.import  cave_tile_set.tres  dungeon_tile_set.png.import  dungeon_tile_set.tres  voxelibre_character_1.atlas  voxelibre_character_1.atlas.import  voxelibre_character_1.png.import  voxelibre_character_1.sprite_frames.tres
assets/images/voxelibre/src/: entity_template.blend  gdx_texture_packer.tpproj  template.blend
src/: lib.rs
src/entities/: entity.rs  entity_definition.rs  mod.rs
src/entities/actors/actions/: mod.rs
src/game/: event_handler.rs  mod.rs  mod.tscn
src/utils/: grid.rs  mod.rs
src/utils/libgdx_atlas_importer/: editor_import_plugin.rs  editor_plugin.rs  mod.rs
