[package]
name = "godot4_rust_roguelike_tutorial"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[dependencies]
arrayvec = "0"
strum = { version = "0", features = ["derive"] }
# static_assertions = "1"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = [
	"experimental-godot-api",
	"experimental-threads",
]
